// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeightsComponent should create hgv view only with populated data 1`] = `
<vtm-weights
  activeRecord={[Function Object]}
>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        />
        <th
          class="govuk-table__header govuk-!-width-one-quarter"
          scope="col"
        >
          GB weight (kg)
        </th>
        <th
          class="govuk-table__header govuk-!-width-one-quarter"
          scope="col"
        >
          EEC weight (kg)
        </th>
        <th
          class="govuk-table__header govuk-!-width-one-quarter"
          scope="col"
        >
           Design weight (kg) 
        </th>
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Gross
        </th>
        <td
          class="govuk-table__cell"
          id="test-grossGbWeight"
        >
           3 
        </td>
        <td
          class="govuk-table__cell"
          id="test-grossEecWeight"
        >
           3 
        </td>
        <td
          class="govuk-table__cell"
          id="test-grossDesignWeight"
        >
           2 
        </td>
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Train
        </th>
        <td
          class="govuk-table__cell"
          id="test-trainGbWeight"
        >
           2 
        </td>
        <td
          class="govuk-table__cell"
          id="test-trainEecWeight"
        >
           - 
        </td>
        <td
          class="govuk-table__cell"
          id="test-trainDesignWeight"
        >
           20 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Max train
        </th>
        <td
          class="govuk-table__cell"
          id="test-maxTrainGbWeight"
        >
           - 
        </td>
        <td
          class="govuk-table__cell"
          id="test-maxTrainEecWeight"
        >
           - 
        </td>
        <td
          class="govuk-table__cell"
          id="test-maxTrainDesignWeight"
        >
           - 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
           Axle 1 
        </th>
        <td
          class="govuk-table__cell"
          id="test-gbWeight-1"
        >
           100 
        </td>
        <td
          class="govuk-table__cell"
          id="test-eecWeight-1"
        >
           150 
        </td>
        <td
          class="govuk-table__cell"
          id="test-designWeight-1"
        >
           250 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
    </tbody>
  </table>
</vtm-weights>
`;

exports[`WeightsComponent should create trl view only with populated data 1`] = `
<vtm-weights
  activeRecord={[Function Object]}
>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        />
        <th
          class="govuk-table__header govuk-!-width-one-quarter"
          scope="col"
        >
          GB weight (kg)
        </th>
        <th
          class="govuk-table__header govuk-!-width-one-quarter"
          scope="col"
        >
          EEC weight (kg)
        </th>
        <th
          class="govuk-table__header govuk-!-width-one-quarter"
          scope="col"
        >
           Design weight (kg) 
        </th>
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Gross
        </th>
        <td
          class="govuk-table__cell"
          id="test-grossGbWeight"
        >
           3 
        </td>
        <td
          class="govuk-table__cell"
          id="test-grossEecWeight"
        >
           3 
        </td>
        <td
          class="govuk-table__cell"
          id="test-grossDesignWeight"
        >
           2 
        </td>
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
      </tr>
      
      
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
           Axle 1 
        </th>
        <td
          class="govuk-table__cell"
          id="test-gbWeight-1"
        >
           100 
        </td>
        <td
          class="govuk-table__cell"
          id="test-eecWeight-1"
        >
           150 
        </td>
        <td
          class="govuk-table__cell"
          id="test-designWeight-1"
        >
           250 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
    </tbody>
  </table>
</vtm-weights>
`;

exports[`WeightsComponent should render the editable component if editState is true 1`] = `
<vtm-weights
  activeRecord={[Function Object]}
  editState={[Function Boolean]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        <vtm-weights-edit
          ng-reflect-tech-record="[object Object]"
        >
          <div>
            active record is: {
    "grossGbWeight": 3,
    "grossDesignWeight": 2,
    "grossEecWeight": 3,
    "axles": [
      {
        "parkingBrakeMrk": true,
        "axleNumber": 1,
        "brakes": {
          "brakeActuator": 123,
          "leverLength": 123,
          "springBrakeParking": true
        },
        "tyres": {
          "tyreSize": "16",
          "plyRating": "12S",
          "fitmentCode": "12313",
          "dataTrAxles": 1234
        },
        "weights": {
          "gbWeight": 100,
          "kerbWeight": 150,
          "designWeight": 250,
          "eecWeight": 150
        }
      }
    ]
  }
          </div>
        </vtm-weights-edit>
      </dt>
    </div>
  </dl>
</vtm-weights>
`;
